--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">MobileAttendance</string>
+    <string name="activity_login">登陆</string>
+    <string name="psw_login_title">账号密码登陆</string>
+    <string name="phone_login_title">手机验证码登陆</string>
+    <string name="psw_login_user_id">用户ID</string>
+    <string name="psw_login_user_id_edit">请输入用户ID/手机号/邮箱</string>
+    <string name="psw_login_user_psw">密码</string>
+    <string name="psw_login_user_psw_edit">请输入密码</string>
+    <string name="psw_login_code">验证码</string>
+    <string name="psw_login_code_edit">请输入验证码</string>
+    <string name="psw_login_btn">登陆</string>
+    <string name="change_login_type">切换登陆方式</string>
 </resources>
