登陆验证码点击刷新;登陆跳转功能实现;room+协程+viewmodel存储用户信息staff类;sharedPreferences存储token;全局异常处理并跳转到logActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="psw_login_code_edit">请输入验证码</string>
     <string name="psw_login_btn">登陆</string>
     <string name="change_login_type">切换登陆方式</string>
+
+    <string name="default_log_text">log</string>
 </resources>
